@@ -21,6 +21,13 @@
 
 2009-12-21  Marco Bodrato <bodrato@mail.dm.unipi.it>
 
+	* mpn/generic/toom_couple_handling.c: New file, helper function
+	for high degree Toom.
+	* gmp-impl.h: Provide corresponding declaration.
+	* configure.in (gmp_mpn_functions): List toom_couple_handling.
+	* mpn/generic/toom6h_mul.c: Use shared toom_couple_handling.
+	* mpn/generic/toom63_mul.c: Likewise.
+
 	* mpn/generic/toom6h_mul.c: New file.
 	* mpn/generic/toom_interpolate_12pts.c: New file.
 	* gmp-impl.h: Provide corresponding declarations.
